syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.proto.service";
option java_outer_classname = "ProductoTiendaProto";

package producto_tienda;

message ProductoTienda {
    int64 id = 1;
    int64 producto_id = 2;
    string tienda_id = 3;
    string color = 4;
    string talle = 5;
    int32 cantidad = 6;
}

message ProductoTiendaList {
    repeated ProductoTienda productos = 1;
}

message ListProductoTiendasRequest {
    string tienda_id = 1;
}

service ProductoTiendaService {
    rpc CreateProductoTienda(ProductoTienda) returns (ProductoTienda);
    rpc GetProductoTienda(ProductoTienda) returns (ProductoTienda);
    rpc UpdateProductoTienda(ProductoTienda) returns (ProductoTienda);
    rpc DeleteProductoTienda(ProductoTienda) returns (ProductoTienda);
    rpc ListProductoTiendas(ListProductoTiendasRequest) returns (ProductoTiendaList);
}
